--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -21,20 +21,18 @@
       Hi, i am <br />
       Oyindamola bakare
     </h1>
-    <p class="fronted">
-        frontend developer 
-    </p>
+    <p class="fronted">frontend developer</p>
     <div class="botton1">
-        <a href="/">Download CV </a>
+      <a href="/">Download CV </a>
     </div>
     <div class="botton2">
-        <a href="/">Learn more </a>
+      <a href="/">Learn more </a>
     </div>
     <div class="photo">
       <img src="/img/image 2.png" alt="immagine" />
     </div>
-    <h2>about</h2>
-    <p>
+    <h2 class="about">about</h2>
+    <p class="lorem">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit nulla
       omnis exercitationem temporibus modi, placeat adipisci nemo fuga dolorum
       natus saepe ex voluptatibus mollitia facilis, accusantium, et nesciunt ut
@@ -43,5 +41,35 @@
       dolores totam soluta nostrum itaque, voluptate non dignissimos quas!
       Doloribus, officiis.
     </p>
+    <header class="contacts">
+      <div class="names">
+        <div class="ellipse">
+          <div class="ellipse2"></div>
+        </div>
+        <h2>Full Name</h2>
+        <p>your name goes here</p>
+      </div>
+      <div class="names">
+        <div class="ellipse">
+          <div class="ellipse2"></div>
+        </div>
+        <h2>Email Address</h2>
+        <p>Your email goes here</p>
+      </div>
+      <div class="names">
+        <div class="ellipse">
+          <div class="ellipse2"></div>
+        </div>
+        <h2>twitter</h2>
+        <p>Your email goes here</p>
+      </div>
+      <div class="names">
+        <div class="ellipse">
+          <div class="ellipse2"></div>
+        </div>
+        <h2>Phone</h2>
+        <p>Your name goes here</p>
+      </div>
+    </header>
   </body>
 </html>
