--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -29,7 +29,7 @@
       <a href="/">Learn more </a>
     </div>
     <div class="photo">
-      <img src="/img/image 2.png" alt="immagine" />
+      <img class="imagine" src="/img/image 2.png" alt="imagine" />
     </div>
     <h2 class="about">about</h2>
     <p class="lorem">
@@ -41,35 +41,59 @@
       dolores totam soluta nostrum itaque, voluptate non dignissimos quas!
       Doloribus, officiis.
     </p>
-    <header class="contacts">
-      <div class="names">
+    <section class="contacts">
+      <article class="names">
         <div class="ellipse">
           <div class="ellipse2"></div>
         </div>
         <h2>Full Name</h2>
         <p>your name goes here</p>
-      </div>
-      <div class="names">
+      </article>
+      <article class="names">
         <div class="ellipse">
           <div class="ellipse2"></div>
         </div>
         <h2>Email Address</h2>
         <p>Your email goes here</p>
-      </div>
-      <div class="names">
+      </article>
+      <article class="names">
         <div class="ellipse">
           <div class="ellipse2"></div>
         </div>
         <h2>twitter</h2>
         <p>Your email goes here</p>
-      </div>
-      <div class="names">
+      </article>
+      <article class="names">
         <div class="ellipse">
           <div class="ellipse2"></div>
         </div>
         <h2>Phone</h2>
         <p>Your name goes here</p>
-      </div>
-    </header>
+      </article>
+    </section>
+    <h2 class="about">What i do</h2>
+    <section class="rectangle">
+      <article class="vector">
+        <img src="/img/Vector.png" alt="Vector" />
+        <p>
+          Software <br />
+          Development
+        </p>
+      </article>
+      <article class="vector1">
+        <img src="/img/Vector(1).png" alt="vactor1" />
+        <p>
+          Web <br />
+          Development
+        </p>
+      </article>
+      <article class="vector">
+        <img src="/img/Vector(2).png" alt="vector2" />
+        <p>
+          Web <br />
+          Design
+        </p>
+      </article>
+    </section>
   </body>
 </html>
