--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -95,5 +95,47 @@
         </p>
       </article>
     </section>
+    <h2 class="about">MY skills</h2>
+    <section class="skills">
+      <article class="Software">
+        <h2 class="percentage">50%</h2>
+        <p class="class">HTML</p>
+      </article>
+      <article class="Software">
+        <h2 class="percentage">20%</h2>
+        <p class="class">CSS</p>
+      </article>
+      <article class="Software">
+        <h2 class="percentage">10%</h2>
+        <p class="class">JAVASCRIPT</p>
+      </article>
+      <article class="Software">
+        <h2 class="percentage">2%</h2>
+        <p class="class">PHP</p>
+      </article>
+    </section>
+    <h2 class="about">Get in touch</h2>
+    <form>
+      <div class="form-input">
+        <label for="name">name</label>
+        <input type="text" id="name" name="name" required />
+      </div>
+      <div class="form-input">
+        <label for="last-name">last name</label>
+        <input type="text" id="last-name" name="last-name" />
+      </div>
+      <div class="form-input">
+        <label for="email">email</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <div class="form-input">
+        <label for="Phone-number">Phone number</label>
+        <input type="number" id="Phone-number" name="Phone-number" required />
+        <div class="form-input">
+          <label for="message">message</label>
+          <textarea id="message" name="message"></textarea>
+        </div>
+      </div>
+    </form>
   </body>
 </html>
