--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -120,22 +120,22 @@
         <label for="name">name</label>
         <input type="text" id="name" name="name" required />
       </div>
-      <div class="form-input">
+      <div class="form-input2">
         <label for="last-name">last name</label>
         <input type="text" id="last-name" name="last-name" />
       </div>
-      <div class="form-input">
+      <div class="form-input3">
         <label for="email">email</label>
         <input type="email" id="email" name="email" required />
       </div>
-      <div class="form-input">
+      <div class="form-input4">
         <label for="Phone-number">Phone number</label>
         <input type="number" id="Phone-number" name="Phone-number" required />
-        <div class="form-input">
+        <div class="form-input5">
           <label for="message">message</label>
           <textarea id="message" name="message"></textarea>
-        </div>
       </div>
+      <input id="submit" type="submit" value="submit" />
     </form>
   </body>
 </html>
