--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -117,25 +117,24 @@
     <h2 class="about">Get in touch</h2>
     <form>
       <div class="form-input">
-        <label for="name">name</label>
-        <input type="text" id="name" name="name" required />
+        <input type="text" id="name" name="name" placeholder="name" required />
+
+        <input type="text" id="last-name" placeholder="last name" name="last-name" />
       </div>
-      <div class="form-input2">
-        <label for="last-name">last name</label>
-        <input type="text" id="last-name" name="last-name" />
+      <div class="form-input">
+        <input type="email" id="email" placeholder="email" name="email" required />
+
+        <input type="number" id="Phone-number" placeholder="Phone number" name="Phone-number" required />
       </div>
-      <div class="form-input3">
-        <label for="email">email</label>
-        <input type="email" id="email" name="email" required />
+      <div class="form-input">
+        <textarea class="input-control" id="message" placeholder="message" name="message"></textarea>
       </div>
-      <div class="form-input4">
-        <label for="Phone-number">Phone number</label>
-        <input type="number" id="Phone-number" name="Phone-number" required />
-        <div class="form-input5">
-          <label for="message">message</label>
-          <textarea id="message" name="message"></textarea>
-      </div>
-      <input id="submit" type="submit" value="submit" />
+      <input id="submit" type="submit" value="submit now" />
     </form>
+    <footer>
+      <small>
+        © Oyindamola 2020
+      </small>
+    </footer>
   </body>
 </html>
