--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -71,30 +71,33 @@
         <p>Your name goes here</p>
       </article>
     </section>
-    <h2 class="about">What i do</h2>
-    <section class="rectangle">
-      <article class="vector">
-        <img src="/img/Vector.png" alt="Vector" />
-        <p>
-          Software <br />
-          Development
-        </p>
-      </article>
-      <article class="vector">
-        <img src="/img/Vector(1).png" alt="vactor1" />
-        <p>
-          Web <br />
-          Development
-        </p>
-        <div class="vector1" href="/"></div>
-      </article>
-      <article class="vector">
-        <img src="/img/Vector(2).png" alt="vector2" />
-        <p>
-          Web <br />
-          Design
-        </p>
-      </article>
+    <section class="what-i-do">
+      <div class="container">
+        <h2 class="about">What i do</h2>
+        <div class="tecnologies">
+          <div class="tecnology">
+            <img src="/img/Vector.png" alt="Vector" />
+            <p class="tecnology-name">
+              Software <br />
+              Development
+            </p>
+          </div>
+          <div class="tecnology tecnology--active">
+            <img src="/img/Vector(1).png" alt="vactor1" />
+            <p class="tecnology-name">
+              Web <br />
+              Development
+            </p>
+          </div>
+          <div class="tecnology">
+            <img src="/img/Vector(2).png" alt="vector2" />
+            <p class="tecnology-name">
+              Web <br />
+              Design
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <h2 class="about">MY skills</h2>
     <section class="skills">
@@ -115,22 +118,34 @@
         <p class="class">PHP</p>
       </article>
     </section>
-    <h2 class="about">Get in touch</h2>
     <form>
-      <div class="form-input">
-        <input type="text" id="name" name="name" placeholder="name" required />
-
-        <input type="text" id="last-name" placeholder="last name" name="last-name" />
+      <div class="container">
+        <h2 class="about">Get in touch</h2>
+        <div class="form-container">
+          <div class="form-container-row">
+            <div class="form-input">
+              <input type="text" id="name" name="name" placeholder="name" required />
+            </div>
+            <div class="form-input">
+              <input type="text" id="last-name" placeholder="last name" name="last-name" />
+            </div>
+          </div>
+          <div class="form-container-row">
+            <div class="form-input">
+              <input type="email" id="email" placeholder="email" name="email" required />
+            </div>
+            <div class="form-input">
+              <input type="number" id="Phone-number" placeholder="Phone number" name="Phone-number" required />
+            </div>
+          </div>
+          <div class="form-input">
+            <textarea id="message" placeholder="message" name="message"></textarea>
+          </div>
+        </div>
+        <div class="form-submit">
+          <input id="submit" type="submit" value="submit now" />
+        </div>
       </div>
-      <div class="form-input">
-        <input type="email" id="email" placeholder="email" name="email" required />
-
-        <input type="number" id="Phone-number" placeholder="Phone number" name="Phone-number" required />
-      </div>
-      <div class="form-input">
-        <textarea class="input-control" id="message" placeholder="message" name="message"></textarea>
-      </div>
-      <input id="submit" type="submit" value="submit now" />
     </form>
     <footer>
       <small>
