--- a/desktop2/index.html
+++ b/desktop2/index.html
@@ -17,30 +17,32 @@
         <li><a class="menu2" href="/">contact me</a></li>
       </ul>
     </header>
-    <h1>
-      Hi, i am <br />
-      Oyindamola bakare
-    </h1>
-    <p class="fronted">frontend developer</p>
-    <div class="botton1">
-      <a href="/">Download CV </a>
+    <div class="container">
+      <h1>
+        Hi, i am <br />
+        Oyindamola bakare
+      </h1>
+      <p class="fronted">frontend developer</p>
+      <div class="botton1">
+        <a href="/">Download CV </a>
+      </div>
+      <div class="botton2">
+        <a href="/">Learn more </a>
+      </div>
+      <div class="photo">
+        <img class="imagine" src="/img/image 2.png" alt="imagine" />
+      </div>
     </div>
-    <div class="botton2">
-      <a href="/">Learn more </a>
-    </div>
-    <div class="photo">
-      <img class="imagine" src="/img/image 2.png" alt="imagine" />
-    </div>
-    <h2 class="about">about</h2>
-    <p class="lorem">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit nulla
-      omnis exercitationem temporibus modi, placeat adipisci nemo fuga dolorum
-      natus saepe ex voluptatibus mollitia facilis, accusantium, et nesciunt ut
-      est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-      eius quisquam consequuntur ea nesciunt veniam maxime corrupti soluta. Id
-      dolores totam soluta nostrum itaque, voluptate non dignissimos quas!
-      Doloribus, officiis.
-    </p>
+      <h2 class="about">about</h2>
+      <p class="lorem">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit nulla
+        omnis exercitationem temporibus modi, placeat adipisci nemo fuga dolorum
+        natus saepe ex voluptatibus mollitia facilis, accusantium, et nesciunt ut
+        est! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+        eius quisquam consequuntur ea nesciunt veniam maxime corrupti soluta. Id
+        dolores totam soluta nostrum itaque, voluptate non dignissimos quas!
+        Doloribus, officiis.
+      </p>
     <section class="contacts">
       <article class="names">
         <div class="ellipse">
@@ -124,22 +126,49 @@
         <div class="form-container">
           <div class="form-container-row">
             <div class="form-input">
-              <input type="text" id="name" name="name" placeholder="name" required />
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="name"
+                required
+              />
             </div>
             <div class="form-input">
-              <input type="text" id="last-name" placeholder="last name" name="last-name" />
+              <input
+                type="text"
+                id="last-name"
+                placeholder="last name"
+                name="last-name"
+              />
             </div>
           </div>
           <div class="form-container-row">
             <div class="form-input">
-              <input type="email" id="email" placeholder="email" name="email" required />
+              <input
+                type="email"
+                id="email"
+                placeholder="email"
+                name="email"
+                required
+              />
             </div>
             <div class="form-input">
-              <input type="number" id="Phone-number" placeholder="Phone number" name="Phone-number" required />
+              <input
+                type="number"
+                id="Phone-number"
+                placeholder="Phone number"
+                name="Phone-number"
+                required
+              />
             </div>
           </div>
           <div class="form-input">
-            <textarea id="message" placeholder="message" name="message"></textarea>
+            <textarea
+              id="message"
+              placeholder="message"
+              name="message"
+            ></textarea>
           </div>
         </div>
         <div class="form-submit">
@@ -148,9 +177,7 @@
       </div>
     </form>
     <footer>
-      <small>
-        © Oyindamola 2020
-      </small>
+      <small> © Oyindamola 2020 </small>
     </footer>
   </body>
 </html>
