--- a/cuda/index.html
+++ b/cuda/index.html
@@ -39,29 +39,29 @@
         <div class="names">
           <img src="/img/icon-branding 1.png" alt="branding" />
           <h2 class="contacts-names">Branding</h2>
-          <p class="contacts-p">Lorem ipsum dolor sit amet, 
-            consectetuer adipiscing elit, 
+          <p class="contacts-p">Lorem ipsum dolor sit amet,<br> 
+            consectetuer adipiscing elit, <br>
             sed diam nonummy nibh.</p>
         </div>
         <div class="names">
           <img src="/img/icon-design 1.png" alt="desing" />
           <h2 class="contacts-names">Design</h2>
-          <p class="contacts-p">Sed ut perspiciatis unde 
-            omnis iste natus error sit 
+          <p class="contacts-p">Sed ut perspiciatis unde <br>
+            omnis iste natus error sit <br>
             voluptatem  </p>
         </div>
         <div class="names">
           <img src="/img/icon-development 1.png" alt="development" />
           <h2 class="contacts-names">Development</h2>
-          <p class="contacts-p">At vero eos et accusamus et 
-            iusto odio dignissimos qui 
+          <p class="contacts-p">At vero eos et accusamus et <br>
+            iusto odio dignissimos qui <br>
             blanditiis praesentium.</p>
         </div>
         <div class="names">
           <img src="/img/icon-rocket 1.png" alt="rocket" />
           <h2 class="contacts-names">ROCKET SCIENCE</h2>
-          <p class="contacts-p">Et harum quidem rerum est 
-            et expedita distinctio. 
+          <p class="contacts-p">Et harum quidem rerum est <br>
+            et expedita distinctio. <br>
             Nam libero tempore.</p>
         </div>
       </section>
