--- a/cuda/index.html
+++ b/cuda/index.html
@@ -33,38 +33,244 @@
       <div class="line"></div>
       <p class="services-p">
         We are working with both individuals and businesses from all over the
-        globe <br> to create awesome websites and applications.
+        globe <br />
+        to create awesome websites and applications.
       </p>
       <section class="contacts">
         <div class="names">
           <img src="/img/icon-branding 1.png" alt="branding" />
           <h2 class="contacts-names">Branding</h2>
-          <p class="contacts-p">Lorem ipsum dolor sit amet,<br> 
-            consectetuer adipiscing elit, <br>
-            sed diam nonummy nibh.</p>
+          <p class="contacts-p">
+            Lorem ipsum dolor sit amet,<br />
+            consectetuer adipiscing elit, <br />
+            sed diam nonummy nibh.
+          </p>
         </div>
         <div class="names">
           <img src="/img/icon-design 1.png" alt="desing" />
           <h2 class="contacts-names">Design</h2>
-          <p class="contacts-p">Sed ut perspiciatis unde <br>
-            omnis iste natus error sit <br>
-            voluptatem  </p>
+          <p class="contacts-p">
+            Sed ut perspiciatis unde <br />
+            omnis iste natus error sit <br />
+            voluptatem
+          </p>
         </div>
         <div class="names">
           <img src="/img/icon-development 1.png" alt="development" />
           <h2 class="contacts-names">Development</h2>
-          <p class="contacts-p">At vero eos et accusamus et <br>
-            iusto odio dignissimos qui <br>
-            blanditiis praesentium.</p>
+          <p class="contacts-p">
+            At vero eos et accusamus et <br />
+            iusto odio dignissimos qui <br />
+            blanditiis praesentium.
+          </p>
         </div>
         <div class="names">
           <img src="/img/icon-rocket 1.png" alt="rocket" />
           <h2 class="contacts-names">ROCKET SCIENCE</h2>
-          <p class="contacts-p">Et harum quidem rerum est <br>
-            et expedita distinctio. <br>
-            Nam libero tempore.</p>
+          <p class="contacts-p">
+            Et harum quidem rerum est <br />
+            et expedita distinctio. <br />
+            Nam libero tempore.
+          </p>
         </div>
       </section>
+    </div>
+    <div class="container-team">
+      <h2 class="team--h2">MEET OUR BEAUTIFUL TEAM</h2>
+      <div class="line"></div>
+      <p class="team--p">
+        We are a small team of designers and developers, who help brands with
+        big ideas.
+      </p>
+      <section class="contacts">
+        <div class="people">
+          <img src="/img/Base.png" alt="ANNE" />
+          <h2 class="team-h2">ANNE HATHAWAY</h2>
+          <h3 class="team-h3">CEO / Marketing Guru</h3>
+          <p class="team-p">
+            Lorem ipsum dolor sit amet,<br />
+            consectetuer adipiscing elit, <br />
+            sed diam nonummy nibh <br />
+            euismod tincidunt ut laoreet <br />
+            dolore magna.
+          </p>
+          <div class="social">
+            <img src="/img/Fb icon.png" alt="Fb" />
+            <img src="/img/Twitter icon.png" alt="Twitter" />
+            <img src="/img/LinkedIn icon.png" alt="LinkedIn" />
+            <img src="/img/Mail icon.png" alt="Mail" />
+          </div>
+        </div>
+        <div class="people">
+          <img src="/img/Base2.png" alt="Kate" />
+          <h2 class="team-h2">Kate Upton</h2>
+          <h3 class="team-h3">Creative Director</h3>
+          <p class="team-p">
+            Duis aute irure dolor in in <br />
+            voluptate velit esse cillum <br />
+            dolore fugiat nulla pariatur. <br />
+            Excepteur sint occaecat non <br />
+            diam proident.
+          </p>
+          <div class="social">
+            <img src="/img/Twitter icon.png" alt="Twitter" />
+            <img src="/img/LinkedIn icon.png" alt="LinkedIn" />
+            <img src="/img/Mail icon.png" alt="Mail" />
+          </div>
+        </div>
+        <div class="people">
+          <img src="/img/Base3.png" alt="Olivia" />
+          <h2 class="team-h2">Olivia Wilde</h2>
+          <h3 class="team-h3">Lead Designer</h3>
+          <p class="team-p">
+            Nemo enim ipsam voluptas <br />
+            sit aspernatur aut odit aut <br />
+            fugit, sed quia consequuntur <br />
+            magni dolores eos qui ratione <br />
+            voluptatem nesciunt.
+          </p>
+          <div class="social">
+            <img src="/img/Fb icon.png" alt="Fb" />
+            <img src="/img/Twitter icon.png" alt="Twitter" />
+            <img src="/img/LinkedIn icon.png" alt="LinkedIn" />
+            <img src="/img/Mail icon.png" alt="Mail" />
+          </div>
+        </div>
+        <div class="people">
+          <img src="/img/Base4.png" alt="Ashley" />
+          <h2 class="team-h2">Ashley Greene</h2>
+          <h3 class="team-h3">SEO / Developer</h3>
+          <p class="team-p">
+            Sed ut perspiciatis unde <br />
+            omnis iste natus error sit <br />
+            voluptatem accusantium <br />
+            doloremque laudantium, <br />
+            totam rem aperiam.
+          </p>
+          <div class="social">
+            <img src="/img/Fb icon.png" alt="Fb" />
+            <img src="/img/Twitter icon.png" alt="Twitter" />
+            <img src="/img/Mail icon.png" alt="Mail" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-skills">
+      <h2 class="skills--h2">WE GOT SKILLS!</h2>
+      <div class="line"></div>
+      <p class="skills--p">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <br />
+        tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+      <section class="contacts">
+        <div class="skills">
+          <img src="/img/Group 11.png" alt="Web design" />
+          <h2 class="skills-h2">Web Design</h2>
+        </div>
+        <div class="skills">
+          <img src="/img/Group 12.png" alt="html/css" />
+          <h2 class="skills-h2">HTML / CSS</h2>
+        </div>
+        <div class="skills">
+          <img src="/img/Group 13.png" alt="graphic design" />
+          <h2 class="skills-h2">GRAPHIC DESIGN</h2>
+        </div>
+        <div class="skills">
+          <img src="/img/Group 14.png" alt="ui/ux" />
+          <h2 class="skills-h2">UI / UX</h2>
+        </div>
+      </section>
+    </div>
+    <div class="container-portfolio">
+      <h2 class="portfolio--h2">OUR PORTFOLIO</h2>
+      <div class="line"></div>
+      <p class="portfolio--p">
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet <br />
+        consectetur, adipisci velit, sed quia non numquam
+      </p>
+      <div class="categories">
+        <a href="/" class="categories1">ALL</a>
+        <a href="/" class="categories1">WEB</a>
+        <a href="/" class="categories1">APPS</a>
+        <a href="/" class="categories1">ICONS</a>
+      </div>
+      <div class="container-works">
+        <div class="container-works-row">
+          <div class="works">
+            <img src="/img/1.png" alt="1" />
+            <p class="works-p">Isometric Perspective Mock-Up</p>
+          </div>
+          <div class="works">
+            <img src="/img/2.png" alt="2" />
+            <p class="works-p">Time Zone App UI</p>
+          </div>
+        </div>
+        <div class="container-works-row">
+          <div class="works">
+            <img src="/img/3.png" alt="3" />
+            <p class="works-p">Viro Media Players UI</p>
+          </div>
+          <div class="works">
+            <img src="/img/4.png" alt="4" />
+            <p class="works-p">Blog / Magazine Flat UI Kit</p>
+          </div>
+        </div>
+      </div>
+      <div class="bottom2">
+        <a href="/">LOAD MORE PROJECTS</a>
+      </div>
+    </div>
+    <div class="container-people">
+      <h2 class="people--h2">WHAT POEPLE SAY ABOUT US</h2>
+      <div class="line"></div>
+      <p class="people--p">Our clients love us!</p>
+      <div class="container--people">
+        <div class="container--people-row">
+          <div class="people">
+            <img src="/img/Base5.png" alt="5" />
+            <p class="people-p">
+              “Nullam dapibus blandit orci, <br />
+              viverra gravida dui lobortis eget. Maecenas <br />
+              fringilla urna eu nisl scelerisque.”
+            </p>
+            <h2 class="people-h2">Chanel Iman</h2>
+            <p class="people-p-orange">CEO of Pinterest</p>
+          </div>
+          <div class="people">
+            <img src="/img/Base6.png" alt="6" />
+            <p class="people-p">
+              “Vivamus luctus urna sed urna ultricies <br />
+              ac tempor dui sagittis. In condimentum <br />
+              facilisis porta.”
+            </p>
+            <h2 class="people-h2">ADRIANA LIMA</h2>
+            <p class="people-p-orange">Founder of Instagram</p>
+          </div>
+        </div>
+        <div class="container--people-row">
+          <div class="people">
+            <img src="/img/Base7.png" alt="7" />
+            <p class="people-p">
+              “Vivamus luctus urna sed urna ultricies <br />
+              ac tempor dui sagittis. In condimentum <br />
+              facilisis porta.”
+            </p>
+            <h2 class="people-h2">ANNE HATHAWAY</h2>
+            <p class="people-p-orange">Lead Designer at Behance</p>
+          </div>
+          <div class="people">
+            <img src="/img/base8.png" alt="8" />
+            <p class="people-p">
+              “Phasellus non purus vel arcu tempor <br />
+              commodo. Fusce semper, purus vel luctus <br />
+              molestie, risus sem cursus neque.”
+            </p>
+            <h2 class="people-h2">EMMA STONE</h2>
+            <p class="people-p-orange">Co-Founder of Shazam</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
