--- a/cuda/index.html
+++ b/cuda/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href='https://fonts.googleapis.com/css?family=Titillium Web' rel='stylesheet'>
     <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
@@ -271,6 +272,54 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="form-container">
+      <h2 class="form-h2">GET IN TOUCH</h2>
+      <div class="line"></div>
+      <p class="form-p">
+        1600 Pennsylvania Ave NW, Washington, DC 20500, United States of
+        America. Tel: (202) 456-1111
+      </p>
+      <form>
+        <div class="form-container-inline">
+          <div class="form-input">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Your Name*"
+              required
+            />
+          </div>
+          <div class="form-input">
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Your Email*"
+              required
+            />
+          </div>
+        </div>
+        <div class="form-input">
+          <textarea id="message" placeholder="Your Message*" name="message">
+          </textarea>
+        </div>
+        <div class="form-submit">
+          <input id="submit" type="submit" value="SEND MESSAGE" />
+        </div>
+      </form>
+    </div>
+    <div class="container-footer">
+      <footer>
+        <a href="/" class="footer">Facebook</a>
+        <a href="/" class="footer">Twitter</a>
+        <a href="/" class="footer">Google+</a>
+        <a href="/" class="footer">LinkdIn</a>
+        <a href="/" class="footer">Behance</a>
+        <a href="/" class="footer">Dribbble</a>
+        <a href="/" class="footer">GitHub</a>
+      </footer>
     </div>
   </body>
 </html>
