--- a/cuda/index.html
+++ b/cuda/index.html
@@ -6,7 +6,10 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href='https://fonts.googleapis.com/css?family=Titillium Web' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Titillium Web"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
